# Mw_StockMarket_Analytics

./: .gitignore  E2E-TEST-PLAN.md  GETTING-STARTED.md  Mw_Stockmarket_gpu.ipynb  PHASE0-COMPLETE.md  PHASE1A-COMPLETION.md  PHASE1A-STATUS.md  QUICK-START.md  README.md  SYSTEM-CONTEXT.md
backend/: .env.example  Dockerfile  Dockerfile.worker  alembic.ini  celerybeat-schedule  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: celery_app.py  config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/models/: __init__.py  actionable_insight.py  channel.py  company.py  daily_report.py  embedding.py  financials.py  investment_thesis.py  key_number.py  market_data.py  news_analyst.py  quote.py  sentiment.py  summary.py  task_log.py  topic.py  transcript.py  user.py  video.py  video_stat_snapshot.py
backend/app/prompts/: actionable_insights.py  company_executive_summary.py  entity_extraction.py  executive_summary.py  investment_thesis.py  key_numbers.py  news_classification.py  quotes.py  rag_answer.py  sentiment.py  topics.py
backend/app/providers/embeddings/: ollama_embedding_provider.py
backend/app/providers/llm/: base.py  ollama_provider.py  openai_provider.py
backend/app/providers/market_data/: __init__.py  base.py  composite_provider.py  twelvedata_provider.py  yfinance_provider.py
backend/app/providers/transcription/: base.py  groq_provider.py  whisper_api_provider.py  whisper_local_provider.py  youtube_captions_provider.py
backend/app/providers/video_platforms/: base.py  youtube_provider.py  ytdlp_provider.py
backend/app/repositories/: analysis_repository.py  analyst_repository.py  base.py  channel_repository.py  company_repository.py  embedding_repository.py  executive_summary_repository.py  financials_repository.py  market_data_repository.py  news_repository.py  transcript_repository.py  video_repository.py
backend/app/schemas/: analysis.py  channel.py  company_intelligence.py  report.py  search.py  transcript.py  video.py
backend/app/services/: analysis_service.py  analyst_service.py  channel_discovery_service.py  company_intelligence_service.py  embedding_service.py  executive_summary_service.py  financials_service.py  market_data_service.py  news_service.py  quota_tracker.py  rag_chat_service.py  report_service.py  search_service.py  technical_analysis_service.py  transcript_service.py
backend/app/utils/: chunking.py
backend/app/workers/: pipeline.py
backend/app/workers/tasks/: analysis_tasks.py  discovery_tasks.py  embedding_tasks.py  maintenance_tasks.py  market_data_tasks.py  report_tasks.py  (+1 more)
backend/tests/: conftest.py
backend/tests/unit/: test_health.py
(+60 files in other folders)
